hopefully fixed the overflow issue on the name

--- a/client/src/components/ProductDescription.scss
+++ b/client/src/components/ProductDescription.scss
@@ -58,7 +58,8 @@
     width: auto;
     color: black;
     margin-left: 5%;
-    overflow-x: visible;
+    overflow: hidden;
+    word-wrap: break-word;
 }
 
 .price{
